--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,16 +25,15 @@ jobs:
       - name: Install
         shell: bash -l {0}
         run: |
-          pip install nose pytest-flake8
+          pip install 'flake8<3.8' pytest-flake8 'pytest>=7.0'
           pip install -v -e .
 
       - name: List installed packages
         shell: bash -l {0}
         run: |
-          conda list
           pip list -v
 
-      - name: Run nosetests
+      - name: Run pytest
         shell: bash -l {0}
         run: |
-          nosetests tests --all 
+          pytest tests
