--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install
         shell: bash -l {0}
         run: |
-          mamba install flake8 'pytest-flake8 'pytest<8.0'
+          mamba install flake8 pytest-flake8 'pytest<8.0'
           pip install -v -e .
 
       - name: List installed packages
