--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "numpy>1.15",
     "matplotlib>3.1",
     "pandas",
-    "astropy-base",
+    "astropy",
     "astroquery",
     "lxml",
     "beautifulsoup4",
